[package]
name = "declus"
version = "0.1.0"
authors = ["Wanderley Alisson <wanderley.alisson@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
serde = { version = "1.0.126", features = ["derive"] }
diesel = { version = "1.4.7", features = ["postgres", "r2d2", "uuidv07"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
async-graphql = "2.9.2"
async-graphql-actix-web = "2.9.2"
actix-web-actors = "3.0.0"
uuid = {version = "0.8.2", features = ["v4"] }
validator = { version = "0.13.0", features = ["derive"] }
orion = { version = "0.16.0"}
num_cpus = "1.13.0"
env_logger = "0.8.4"